--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "NODE_ENV=production webpack --config webpack.config.js",
     "dev": "NODE_ENV=development npx webpack serve --mode=development",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "npx prettier --write src"
   },
   "repository": {
     "type": "git",
