--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "NODE_ENV=development npx webpack serve --mode=development",
     "lint": "eslint . --ext .ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "npx prettier --write src"
+    "format": "npx prettier --write src",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
     "mini-css-extract-plugin": "^2.4.3",
     "prettier": "2.4.1",
     "sass": "^1.43.4",
