--- a/package.json
+++ b/package.json
@@ -43,5 +43,9 @@
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix",
+    "*.src": "prettier --write"
   }
 }
